fix dates
